Removed excess classpath entries

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,12 +1,13 @@
+file.reference.BrowserLauncher2-10rc4.jar=lib/BrowserLauncher2-10rc4.jar
+file.reference.hb16.jar=lib/hb16.jar
+file.reference.jl1.0.jar=lib/jl1.0.jar
 #Sun Jun 26 02:45:24 EDT 2011
 jnlp.offline-allowed=false
 javadoc.splitindex=true
 build.classes.excludes=**/*.java,**/*.form
-file.reference.plugin.jar=C\:\\Program Files\\Java\\j2re1.4.2_10\\lib\\plugin.jar
 javadoc.author=false
 build.sysclasspath=ignore
 jmx.jconsole.enabled=true
-source.reference.jl1.0.jar=D\:/JLayer1.0/src
 javac.target=1.7
 build.generated.dir=${build.dir}/generated
 run.classpath=\
@@ -24,7 +25,6 @@ jnlp.signed=false
 jnlp.applet.class=hsplet.Applet
 jar.archive.disabled=${jnlp.enabled}
 includes=**
-javadoc.reference.jl1.0.jar=D\:\\JLayer1.0\\doc
 application.vendor=jdstroy
 mkdist.disabled=false
 jar.compress=false
@@ -32,7 +32,6 @@ jmx.config.file=
 jnlp.mixed.code=default
 javadoc.version=false
 build.classes.dir=${build.dir}/classes
-file.reference.hb16.jar=C\:\\Downloads\\com.group-finity\\hsplet\\HSPLet_3.0.1.2\\src\\lib\\hb16.jar
 dist.dir=dist
 javac.source=1.7
 run.jvmargs=-server -Xmx1024m -Xss1m
@@ -48,22 +47,17 @@ platform.active=default_platform
 annotation.processing.enabled=true
 main.class=hsplet.compiler.GuiFrontEnd
 dist.javadoc.dir=${dist.dir}/javadoc
-file.reference.BrowserLauncher2-10rc4.jar=C\:\\Downloads\\com.group-finity\\hsplet\\HSPLet_3.0.1.2\\src\\lib\\BrowserLauncher2-10rc4.jar
 javadoc.additionalparam=
 javac.classpath=\
-    ${file.reference.jl1.0.jar}:\
-    ${file.reference.hb16.jar}:\
-    ${file.reference.plugin.jar}:\
-    ${file.reference.BrowserLauncher2-10rc4.jar}:\
     ${libs.ObjectWeb_ASM.classpath}:\
     ${libs.Xstream-XML-Library.classpath}:\
-    ${file.reference.sqlitejdbc-v056.jar}:\
     ${libs.LiveConnect.classpath}:\
-    ${libs.AppletPlugin.classpath}
+    ${file.reference.BrowserLauncher2-10rc4.jar}:\
+    ${file.reference.hb16.jar}:\
+    ${file.reference.jl1.0.jar}
 src.compiler.dir=${file.reference.HSPLet-compiler}
 javadoc.noindex=false
 annotation.processing.enabled.in.editor=false
-file.reference.sqlitejdbc-v056.jar=D\:\\Downloads\\sqlitejdbc-v056.jar
 javadoc.private=false
 auxiliary.org-netbeans-modules-projectimport-eclipse-core.timestamp=1143430536000
 javadoc.encoding=${source.encoding}
@@ -76,7 +70,6 @@ jmx.jconsole.plugins.path=
 jmx.rmi.use.port=true
 jnlp.signing.keystore=
 meta.inf.dir=${src.dir}/META-INF
-file.reference.jl1.0.jar=C\:\\Downloads\\com.group-finity\\hsplet\\HSPLet_3.0.1.2\\src\\lib\\jl1.0.jar
 annotation.processing.run.all.processors=true
 excludes=
 application.title=HSPLet
